...
    <View>
      <View style={[s.inputWrap, borderStyle]}>
        <Text style={s.prefix}>+91</Text>
        <View style={s.divider} />
        <TextInput
          ref={setInputRef}
          testID="phone-input"
          allowFontScaling={false}
          placeholder="Enter your mobile number"
          placeholderTextColor={colors.subtext}
          keyboardType="number-pad"
          returnKeyType="done"
          textContentType="telephoneNumber"
...
