...
    const [isPressed, setIsPressed] = useState(false);
    const [query, setQuery] = useState("");

    if (onPress) {
      return (
        <Touchable
          testID="home-search-bar"
          onPress={onPress}
          onPressIn={() => {
            setIsPressed(true);
            onPressIn?.();
          }}
          onPressOut={() => setIsPressed(false)}
...
